- Added caption parameter to wxGetFontFromUser and wxGetColourFromUser.
- Added wxGetMouseState function.
- Added wxHtmlHelpWindow, wxHtmlHelpDialog and wxHtmlModalHelp classes,
  allowing HTML help to be embedded in an application.
- wxCalendarCtrl positioning and hit-testing fixes for dimensions other than
  best size.
- wxCalendarCtrl colour schema changed and adjusted to system settings.
- More checking of image validity before loading into wxImage.
- Added wxImage::ConvertToGreyscale.
- Added ability to use templates with static event tables
  with BEGIN_EVENT_TABLE_TEMPLATEn() macros.
- Added play, pause, and state change events to wxMediaCtrl.
- Added double-buffering to wxVListBox and fixed a scrolling issue.
- Added wxToolbook (uses a wxToolBar to control pages).
- Added SetSheetStyle to wxPropertySheetDialog and allowed it to
  behave like a Mac OS X settings dialog.
- Added <disabled> XRC tag for wxToolBar elements and <bg> for wxToolBar itself.
- Fixed centering of top level windows on secondary displays.
- Implemented wxDisplay::GetFromWindow() for platforms other than MSW.
- UpdateUI handler can now show/hide the window too (Ronald Weiss).
- More than one filter allowed in in wxDocTemplate filter.
- Added wxListBox::HitTest().
- Added wxDisplay::GetClientArea().
- Indices and counts in wxControlWithItems derived API are unsigned.
- Added support for links to wxHtmlListBox; use code has to override
  wxHtmlListBox::OnLinkClicked() to take advantage of it.

wxMSW:

- Fixed crash with ownerdrawn menu items accelerators (Perry Miller).
- wxFileDialog respects absence of wxCHANGE_DIR flag under NT (Brad Anderson).
- Switching page of a hidden notebook doesn't lose focus (Jamie Gadd).
- Removed wxImageList *GetImageList(int) const.
- Fixed MDI context menu problem.
- Removed __WIN95__ define
- Create msw/rcdefs.h in setup.h's directory, which can be included by
  resource files. It containts platform/compiler specific defines (such as